--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.3.0
   cloud_firestore: ^4.1.0
+  google_fonts: 2.2.0
+  flutter_svg:
+  retrofit: ^3.0.1+1
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +51,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  retrofit_generator:
+  build_runner:
+  json_serializable: ^6.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,16 +67,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/gheVelvet.jpg
-    - images/ghe_cafe_14.jpg
-    - images/ghe_slide.jpg
-    - images/ghe_1.png
-    - images/ghe_2.png
-    - images/gheSofa_3.png
-    - images/gheSofa_5.png
-    - images/gheSofa_1.png
-    - images/gheSofa_2.png
-    - images/love.png
+    - assets/images/
+    - assets/fonts/
+    - assets/icons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
